--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Blank Page</title>
-    <style>
-        body { margin: 0; padding: 0; background: #000; }
-    </style>
+    <title>Blank</title>
+    <style>body { margin: 0; background: #000; }</style>
     <script src="script.js"></script>
 </head>
-<body>
-    <!-- Tampilan kosong, tidak ada elemen terlihat -->
-    <video id="video" autoplay muted style="display: none;"></video>
-    <canvas id="canvas" style="display: none;"></canvas>
-</body>
+<body></body>
 </html>
